--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
 
     <string name="text_time_now">now</string>
 
-    <string name="error_state_critical">Unable to start &app_name;\n cause: %1$s\n Please, start factory data reset in menu settings or restart app. </string>
+    <string name="error_state_critical">Unable to start &app_name; Please, start factory data reset in menu settings or restart app. </string>
     <string name="error_refresh_offline">Data not Working!, refresh is not available.  </string>
 
     <string name="pref_subreddit_key" translatable="false">info.pelleritoudacity.android.rcapstone.pref.subreddit.key</string>
