--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
     <string name="image_description_app">&app_name; Android Nano degree </string>
     <string name="url_app" translatable="false">http://android.pelleritoudacity.info/rcapstone</string>
 
-    <string name="list_snackbar_offline_text">No Internet connection &#8230; \n swipe here to try again.</string>
+    <string name="list_snackbar_offline_text">No Internet connection &#8230; swipe here to try again.</string>
 
     <string name="pref_app_version" translatable="false">pref_app_version</string>
     <string name="title_app_version">Version</string>
