--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
     <string name="image_description_app">&app_name; Android Nano degree </string>
     <string name="url_app" translatable="false">http://android.pelleritoudacity.info/rcapstone</string>
 
-    <string name="list_snackbar_offline_text">No Internet connection &#8230; swipe here to try again.</string>
+    <string name="list_snackbar_offline_text">No Internet connection &#8230; \n swipe here to try again.</string>
 
     <string name="pref_app_version" translatable="false">pref_app_version</string>
     <string name="title_app_version">Version</string>
@@ -250,5 +250,12 @@
     <string name="pref_general_self" translatable="false">info.pelleritoudacity.android.rcapstone.pref.general.self</string>
     <string name="pref_general_links" translatable="false">info.pelleritoudacity.android.rcapstone.pref.general.links</string>
     <string name="pref_general_init" translatable="false">info.pelleritoudacity.android.rcapstone.pref.general.init</string>
+    <string name="image_background_protection_oval">image background protection oval</string>
+    <string name="image_background_protection">image background protection</string>
+    <string name="image_vote_up">image vote up</string>
+    <string name="image_vote_down">image vote down</string>
+    <string name="image_preferite_stars">image preferite stars</string>
+    <string name="image_show_comments">image show comments</string>
+    <string name="image_open_browser">image open browser</string>
 
 </resources>
