--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -256,4 +256,5 @@
     <string name="default_depth_page_titles" translatable="false">6</string>
     <string name="text_logout_error">Logout error: permission declined</string>
     <string name="text_log_in">Log in</string>
+    <string name="text_search_local">Local Search</string>
 </resources>
