--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -241,6 +241,7 @@
     <string name="pref_general_self" translatable="false">info.pelleritoudacity.android.rcapstone.pref.general.self</string>
     <string name="pref_general_links" translatable="false">info.pelleritoudacity.android.rcapstone.pref.general.links</string>
     <string name="pref_general_init" translatable="false">info.pelleritoudacity.android.rcapstone.pref.general.init</string>
+    <string name="pref_widget_id" translatable="false">info.pelleritoudacity.android.rcapstone.pref.widget.id</string>
     <string name="pref_more_fragment_more_nested_position_height" translatable="false">info.pelleritoudacity.android.rcapstone.pref.more.nested.position.height</string>
     <string name="background_image_protection_oval">background image protection oval</string>
     <string name="background_image_protection">background image protection</string>
@@ -257,4 +258,5 @@
     <string name="text_logout_error">Logout error: permission declined</string>
     <string name="text_log_in">Log in</string>
     <string name="text_search_local">Local Search</string>
+    <string name="refresh_widget">refresh widget</string>
 </resources>
