fix widget refresh bug no image

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -264,6 +264,7 @@
     <string name="widget_home">widget home</string>
     <string name="widget_refresh">widget refresh</string>
     <string name="text_error_widget">Init error, Please open app first</string>
+    <string name="text_not_category_widget">empty category click here to select it</string>
     <string name="title_image_widget">image widget</string>
     <string name="text_widget_category">Category</string>
 </resources>
