--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -263,4 +263,5 @@
     <string name="text_widget_category">Category</string>
     <string name="text_no_search">No item found</string>
     <string name="text_no_favorite">No Favorite found</string>
+    <string name="text_no_network">Network not found</string>
 </resources>
