--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -251,7 +251,7 @@
     <string name="text_no_title">title not available</string>
     <string name="text_digit_subscript">The search must be at least 3 characters long</string>
     <string name="search_subscribe_hint">search subscribe (min 3 digit)</string>
-    <string name="text_cancel_dialog">cancel</string>
+    <string name="text_cancel_dialog">Cancel</string>
     <string name="text_dialog_search">Search</string>
     <string-array name="pref_depth_page_titles">
         <item>none</item>
