--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,8 @@
     <string name="text_more_replies">more replies…</string>
     <string name="text_start_login">Please Login</string>
 
+    <string name="text_private_category">Private category, access not allowed</string>
+
     <string name="subject_support_mail">Problem with</string>
     <string name="text_mail_intent">Select email application.</string>
 
@@ -81,6 +83,7 @@
 
     <string name="title_menu_subscriptions">Subscription:</string>
     <string name="title_menu_subscribe">Search Subscribe</string>
+    <string name="title_menu_link">Search Link</string>
     <string name="title_menu_mode_refresh">Refresh</string>
     <string name="title_menu_mode_settings">Settings</string>
 
@@ -250,9 +253,10 @@
     <string name="text_no_subscribers">no subscribers</string>
     <string name="text_no_title">title not available</string>
     <string name="text_digit_subscript">The search must be at least 3 characters long</string>
-    <string name="search_subscribe_hint">search subscribe (min 3 digit)</string>
+    <string name="search_subscribe_hint">search items (min 3 digit)</string>
     <string name="text_cancel_dialog">Cancel</string>
     <string name="text_dialog_search">Search</string>
+    <string name="title_menu_search">Search</string>
     <string-array name="pref_depth_page_titles">
         <item>none</item>
         <item>1 level</item>
