--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -279,5 +279,14 @@
         <item>10</item>
     </string-array>
 
+    <string name="banner_ad_unit_id" translatable="false">0</string>
+    <string name="ad_size_constant" translatable="false">0</string>
+    <string name="ads_app_id">0</string>
+    <string name="ad_unit_id">0</string>
+    <string name="error_load_banner_internal_error">0</string>
+    <string name="error_load_banner_invalid_request">0</string>
+    <string name="error_load_banner_network_error">0</string>
+    <string name="error_load_banner_no_fill">0</string>
+
 
 </resources>
