--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -287,6 +287,7 @@
     <string name="error_load_banner_invalid_request">0</string>
     <string name="error_load_banner_network_error">0</string>
     <string name="error_load_banner_no_fill">0</string>
+    <string name="no_api_key_youtube">ERROR APIKEY EMPTY</string>
 
 
 </resources>
