--- a/app/src/free/res/values-sw800dp/strings.xml
+++ b/app/src/free/res/values-sw800dp/strings.xml
@@ -6,6 +6,7 @@
 
     <string name="ads_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
     <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
     <string name="ad_size_constant" translatable="false">LEADERBOARD</string>
 
     <string name="error_load_banner_internal_error">Error loading banner INTERNAL ERROR</string>
